gridseak-cli/src/render/snapshots/gridseak__render__llm__tests__hero_llm_unbounded.snap
---
source: gridseak-cli/src/render/llm.rs
expression: rendered
---
[gridseak scan_report tokens≈343]
## overview
repo=my-service
scan_id=scan_test
scanned_at=2026-05-17 11:12
branch=main
commit=9f3c2a1
languages=typescript,javascript
score=62/100 band=moderate_risk

## confidence
high: coupling, depth, blast radius
medium: dead code

## priorities
#1 [Critical] Blast radius hotspot :: auth/createSession :: 41 downstream nodes (confidence=high) id=finding_001
#2 [High] Low cohesion :: src/services :: 9 disconnected clusters (confidence=medium) id=finding_002
#3 [High] Dead code :: billing/legacyApplyDiscount :: no production callers (confidence=medium) id=finding_003

## metrics
Health score = 62/100 (Moderate risk)
Cycles = 3 (Risk)
Tangle index = 4.2% (Risk)
Hotspots = 7 (Risk)
Dead functions = 18 (Review)
Avg coupling = 0.42 (Moderate)
Max call depth = 14 (Deep)

## next
gridseak explain finding_001
gridseak graph callers auth/createSession
gridseak graph blast-radius auth/createSession
gridseak compare --previous

## tier_signal
free:
  - Local scans (CLI + MCP server)
  - Scan history on this machine
  - Table / Markdown / JSON / LLM output
  - MCP server over stdio (twelve tools)
  - Graph slice queries (callers, callees, blast radius, cycles)
future_hosted:
  - Multi-repo benchmarks across machines
  - Team-tier judgment sync
  - Audit log retention + RBAC
  - Organisation dashboards
Tell us what would unlock you: `gridseak feedback "<text>"`
